# mcp_svr1

./: .gitignore  GEMINI.md  Plan.md  Plan_0_Introduction.md  Plan_1_Logging.md  Plan_2_CLI_Structure.md  Plan_3_MCP_Tools.md  Plan_4_Type_Hinting.md  Plan_5_Testing_Strategy.md  Plan_6_Documentation.md  README.md  Tasks.md  ToDo.md  pyproject.toml  rename_task.py  sample_capf.py  sample_capf_subprocess.py  sample_test_async_subprocess.py  setttings.json-sample  temp_client_test.py  temp_fastmcp_test.py
.serena/: project.yml
archives/: 20250913-0205-Tasks-done.md  20250913-0300-Tasks-done.md  20250913-0353-Tasks-done.md  20250913-0356-Tasks-done.md  20250913-0429-Tasks-done.md  20250913-0441-Tasks-done.md  20250913-0453-Tasks-done.md  20250913-0501-Tasks-done.md  20250913-1021-ToDo-done.md  20250913-1203-Tasks-done.md  20250913-1248-Tasks-done.md  20250916-0215-Tasks-done.md  20250916-0220-Tasks-done.md  20250916-0227-Tasks-done.md  20250916-0234-Tasks-done.md  20250916-0244-Tasks-done.md  20250916-0453-Tasks-done.md  20250916-0459-Tasks-done.md  20250916-0507-Tasks-done.md  20250916-0511-Tasks-done.md  20250916-0537-Tasks-done.md  20250916-0546-ToDo-done.md  20250916-0553-Tasks-done.md  20250916-2127-ToDo-done.md  20250917-0015-Tasks-done.md  20250917-0020-Tasks-done.md  20250917-0031-Tasks-done.md  20250917-0059-Tasks-done.md  20250917-0102-Tasks-done.md  20250917-0111-Tasks-done.md  20250917-0216-Tasks-done.md  20250917-0221-Tasks-done.md  20250917-0255-Tasks-done.md  20250917-0257-Tasks-done.md  20250917-0339-ToDo-done.md  20250917-0609-Tasks-done.md  20250917-0613-Tasks-done.md  20250917-0619-Tasks-done.md  20250917-0626-Tasks-done.md  20250917-0635-Tasks-done.md  (+9 more)
docs/: CLI.md
tests/: README.md  conftest.py  json-rpc-01-init.json  json-rpc-02-ack.json  sample_capf.py  (+11 more)
(+19 files in other folders)
